# zfs-rs

./: Cargo.toml  LICENSE  README.md  Vagrantfile
nvpair-sys/: Cargo.toml  build.rs
nvpair-sys/src/: lib.rs
nvpair-sys/tests/: tests.rs
src/: errors.rs  lib.rs  nvpair.rs
src/_generated/: datasets.rs  native_properties.rs  property_sources.rs  zfs_cmd.rs  zfs_ioc.rs
src/datasets/: bookmark.rs  iter.rs  mod.rs  properties.rs  snapshot.rs
src/zfs_cmd/: ioctl_fn.rs  mod.rs  zfs_cmd_bindings.rs
tests/: tests.rs
zfs-sys/: Cargo.toml  build.rs  readme.md
zfs-sys/src/: lib.rs
zfs-sys/tests/: tests.rs
