[package]
name = "zfs-rs"
version = "0.0.1"
authors = ["Clint Armstrong <clint@clintarmstrong.net>"]
edition = "2018"
build = "build/main.rs"
description = "A rust ZFS library"
license = "MIT OR Apache-2.0"

[features]
regen = ["zfs-sys", "which"]
#default = ["regen"]

[dependencies]
nvpair-sys = { path = "nvpair-sys", package = "zfs-rs-nvpair-sys", version = "0.0.1" }
cstr = "0.2.5"
anyhow = "1.0"
apply = "0.3"
lazy_static = "1.4"
libc = "0.2"
nix = "0.18"
num-derive = "0.3"
num-traits = "0.2"
strum = "0.19"
strum_macros = "0.19"
thiserror = "1.0"

[dependencies.byte-unit]
version = "4.0"
default-features = false

[build-dependencies]
zfs-sys = { path = "zfs-sys", package = "zfs-rs-zfs-sys", version = "0.0.1", optional = true }
nvpair-sys = { path = "nvpair-sys", package = "zfs-rs-nvpair-sys", version = "0.0.1" }
apply = "0.3"
bindgen = "0.55"
case_style = "0.2"
itertools = "0.9"
num-traits = "0.2"
strum = "0.19"
proc-macro-crate = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
which = {version = "4.0", optional = true}

[dev-dependencies]
anyhow = "1.0"
once_cell = "1.4"
serial_test = "0.5"
tempfile = "3.1"

[workspace]
